# fabri

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASING.md  TODO.md  cli.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: README.md  bedrock.yaml  bedrock_subagent.yaml  benchmark.yaml  example.yaml  research_agent.yaml
docs/: ROADMAP.md  creating-an-agent.md  vision.md
docs/design/: repair-loop.md
scripts/: smoke_gemini.py
src/agent_memory/: __init__.py  cli.py  config.py  paths.py  runtime.py  toon.py
src/agent_memory/core/: agent.py  decompose.py  llm.py  outcome.py
src/agent_memory/memory/: compress.py  embeddings.py  pruning.py  schema.py  store.py
src/agent_memory/orchestrator/: pipeline.py  retrieval.py
src/agent_memory/tools/: agent_runner_tool.py  agent_tool.py  runner.py
src/agent_memory/tools/examples/: bash.json  bash.py  broken_tool.json  edit_file.py  fetch_url.py  grep.py  list_dir.py  mcp_tool.py  python_exec.json  python_exec.py  read_file.py  sum_tool.json  web_search.py  write_file.py
src/agent_memory/tools/examples/example_go_tool/: go.mod  main.go
src/fabri/: __init__.py  admin.py  cli.py  config.py  events.py  paths.py  pricing.py  runtime.py  scaffold.py  tool_scaffold.py
src/fabri/benchmarks/: __init__.py
src/fabri/benchmarks/longmemeval/: README.md  __init__.py  __main__.py  runner.py
src/fabri/benchmarks/session_delta/: __init__.py  __main__.py  runner.py
src/fabri/builder/: __init__.py  discovery.py  ideator.py  prompt_kit.py  skills.py  tool_writer.py  waves.py
src/fabri/builder/skills_examples/clock/: config.yaml  skill.yaml
src/fabri/builder/skills_examples/clock/prompts/: clock.md
src/fabri/builder/skills_examples/clock/tools/: now.json  now.py
src/fabri/core/: agent.py  decompose.py  llm.py  logging_setup.py  outcome.py  planner.py  run_config.py  structured.py
src/fabri/memory/: compress.py  embedded_store.py  embeddings.py  pruning.py  schema.py  store.py
src/fabri/orchestrator/: pipeline.py  retrieval.py  trace_render.py  traces.py
src/fabri/reports/: __init__.py  aggregate.py  chart.py  render.py
src/fabri/sandbox/: Dockerfile.base  __init__.py  docker_sandbox.py
src/fabri/service/: __init__.py  binding.py  http_server.py  launcher.py  service.py  sync.py  tailer.py
src/fabri/tools/: agent_runner_tool.py  agent_tool.py  manifest_schema.py  mcp_client.py  mcp_server.py  registry.py  result.py  runner.py
src/fabri/tools/examples/: ask_user.json  ask_user.py  bash.py  batch.json  broken_tool.py  echo_tool.json  edit_file.json  edit_file.py  fetch_url.json  fetch_url.py  file_stats.json  grep.json  grep.py  list_dir.py  python_exec.py  read_file.json  read_file.py  regex_lines.json  spawn_subagent.json  spawn_subagent.py  write_file.json  write_file.py
src/fabri/tools/examples/example_node_tool/: index.js
src/fabri/tools/examples/example_rust_tool/: Cargo.toml
src/fabri/tools/examples/example_rust_tool/src/: main.rs
src/fabri/tools/recipes/: README.md  __init__.py  fetch_url.json  fetch_url.py  git_diff.json  git_diff.py  grep_dir.json  grep_dir.py  python_eval.json  python_eval.py  run_shell_safe.json  run_shell_safe.py
tests/: test_ask_user.py  test_cli_init.py  test_cli_run_exit_code.py  test_compress.py  test_config_prompt_spawn_thorough.py  test_cost_rollup_thorough.py  test_cost_tracking.py  test_discrepancy.py  test_docker_sandbox.py  test_e2e_agent_loop.py  test_e2e_config_and_admin.py  test_e2e_first_run_smoke.py  test_e2e_structured_output.py  test_ideator.py  test_llm_backends_thorough.py  test_memory_store.py  test_parallel_dispatch.py  test_pricing_thorough.py  test_prompt_kit.py  test_pruning.py  test_repair_loop.py  test_retrieval.py  test_runner_ergonomics.py  test_sandbox.py  test_service.py  test_skills.py  test_spawn_subagent.py  test_system_prompt_frugality.py  test_tool_runner.py  test_tool_writer.py  test_toon.py  test_unit_agent_runner_tool.py  test_unit_batch.py  test_unit_bedrock_backend.py  test_unit_config_qdrant_env.py  test_unit_decompose.py  test_unit_file_tools.py  test_unit_gemini_backend.py  test_unit_llm_caching.py  test_unit_manifest_schema.py  (+24 more)
traces/: 4846d119-4ba7-441b-b78d-d6be26425832.jsonl  6eb1fcd1-e3b5-4332-9cb2-23c772dc0056.jsonl  flawed-session-0.jsonl  flawed-session-1.jsonl  flawed-session-2.jsonl  flawed2-session-0.jsonl  flawed2-session-1.jsonl  flawed2-session-2.jsonl  test-session-1.jsonl
