[project]
name = "agent-memory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
    "anthropic>=0.40",
    "tiktoken>=0.7",
    "pyyaml>=6.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agent-memory = "agent_memory.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_memory*"]

# The bundled example tools are data, not importable modules: a manifest is a
# .json + an executable in any language (Python/Go/...). Without this, a wheel
# install ships only the .py files and drops every .json manifest, so the
# `builtin` manifest_dir token resolves to an empty registry. See tools/examples.
[tool.setuptools.package-data]
"agent_memory.tools.examples" = ["*.json", "example_go_tool/*"]
