[project]
name = "fabri"
version = "0.7.8"
description = "Ever-evolving prompting and context engineering for LLM agents through active memory and result analysis."
readme = "README.md"
requires-python = ">=3.11"
license = "BUSL-1.1"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Rushikesh Patade", email = "pataderushikesh@gmail.com" }]
keywords = [
    "llm", "agent", "agents", "memory", "anthropic", "claude", "openai",
    "qdrant", "orchestration", "toon", "react", "tool-use",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
    # All three provider SDKs ship by default so any `llm.provider`
    # (gemini / anthropic / openai / openrouter) works out of the box with no
    # extra install. gemini is the default provider (see DEFAULT_CONFIG).
    "google-genai>=1.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "tiktoken>=0.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
sqlite = ["sqlite-vec>=0.1.6"]         # G16: embedded vector store (no docker)
dev = ["pytest>=8.0", "build>=1.0", "twine>=5.0"]

[project.urls]
Homepage = "https://github.com/Rushour0/fabri"
Repository = "https://github.com/Rushour0/fabri"
Issues = "https://github.com/Rushour0/fabri/issues"

[project.scripts]
fabri = "fabri.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fabri*"]
# Benchmarks ship in the wheel so users can `python -m fabri.benchmarks.session_delta`.
# (Their __init__.py qualifies them as a proper subpackage.)

# The bundled example tools are data, not importable modules: a manifest is a
# .json + an executable in any language (Python/Go/...). Without this, a wheel
# install ships only the .py files and drops every .json manifest, so the
# `builtin` manifest_dir token resolves to an empty registry. See tools/examples.
[tool.setuptools.package-data]
"fabri.tools.examples" = [
    "*.json",
    "example_go_tool/*",
    "example_rust_tool/*",
    "example_rust_tool/src/*",
    "example_node_tool/*",
]
# G15: tool recipes ship in the wheel so users can `cat $(python -c 'import
# fabri.tools.recipes, os; print(os.path.dirname(fabri.tools.recipes.__file__))')/fetch_url.py`
# and copy them out.
"fabri.tools.recipes" = ["*.json", "*.py", "README.md"]
# S2: Dockerfile.base ships with the wheel so consumers can build
# `fabri/sandbox:latest` directly from an installed package.
"fabri.sandbox" = ["Dockerfile.base"]
